--- a/experiment/mcq.ipynb
+++ b/experiment/mcq.ipynb
@@ -131,6 +131,161 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\HI\\Documents\\test-openai\\projects\\mcqgen\\env\\Lib\\site-packages\\langchain_community\\chat_models\\azure_openai.py:174: UserWarning: As of openai>=1.0.0, Azure endpoints should be specified via the `azure_endpoint` param not `openai_api_base` (or alias `base_url`). Updating `openai_api_base` from https://vijay-m6f1i5sd-eastus2.openai.azure.com/ to https://vijay-m6f1i5sd-eastus2.openai.azure.com/openai.\n",
+      "  warnings.warn(\n",
+      "c:\\Users\\HI\\Documents\\test-openai\\projects\\mcqgen\\env\\Lib\\site-packages\\langchain_community\\chat_models\\azure_openai.py:181: UserWarning: As of openai>=1.0.0, if `deployment_name` (or alias `azure_deployment`) is specified then `openai_api_base` (or alias `base_url`) should not be. Instead use `deployment_name` (or alias `azure_deployment`) and `azure_endpoint`.\n",
+      "  warnings.warn(\n",
+      "c:\\Users\\HI\\Documents\\test-openai\\projects\\mcqgen\\env\\Lib\\site-packages\\langchain_community\\chat_models\\azure_openai.py:189: UserWarning: As of openai>=1.0.0, if `openai_api_base` (or alias `base_url`) is specified it is expected to be of the form https://example-resource.azure.openai.com/openai/deployments/example-deployment. Updating https://vijay-m6f1i5sd-eastus2.openai.azure.com/ to https://vijay-m6f1i5sd-eastus2.openai.azure.com/openai.\n",
+      "  warnings.warn(\n"
+     ]
+    }
+   ],
+   "source": [
+    "from langchain.chat_models import AzureChatOpenAI\n",
+    "from langchain.chains import LLMChain\n",
+    "\n",
+    "# Initialize Azure OpenAI LLM\n",
+    "llm = AzureChatOpenAI(\n",
+    "    openai_api_base=endpoint,  # Replace with your Azure OpenAI endpoint\n",
+    "    openai_api_version=\"2024-05-01-preview\",  # Replace with your API version\n",
+    "    deployment_name=deployment,  # Replace with your deployment name\n",
+    "    openai_api_key=subscription_key,  # Replace with your Azure OpenAI API key\n",
+    "    openai_api_type=\"azure\",\n",
+    "    model_name=\"gpt-4o\" ,  # Replace with your model name\n",
+    "    temperature=0.3\n",
+    ")\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "RESPONSE_JSON = {\n",
+    "    \"1\": {\n",
+    "        \"mcq\": \"multiple choice question\",\n",
+    "        \"options\": {\n",
+    "            \"a\": \"choice here\",\n",
+    "            \"b\": \"choice here\",\n",
+    "            \"c\": \"choice here\",\n",
+    "            \"d\": \"choice here\",\n",
+    "        },\n",
+    "        \"correct\": \"correct answer\",\n",
+    "    },\n",
+    "    \"2\": {\n",
+    "        \"mcq\": \"multiple choice question\",\n",
+    "        \"options\": {\n",
+    "            \"a\": \"choice here\",\n",
+    "            \"b\": \"choice here\",\n",
+    "            \"c\": \"choice here\",\n",
+    "            \"d\": \"choice here\",\n",
+    "        },\n",
+    "        \"correct\": \"correct answer\",\n",
+    "    },\n",
+    "    \"3\": {\n",
+    "        \"mcq\": \"multiple choice question\",\n",
+    "        \"options\": {\n",
+    "            \"a\": \"choice here\",\n",
+    "            \"b\": \"choice here\",\n",
+    "            \"c\": \"choice here\",\n",
+    "            \"d\": \"choice here\",\n",
+    "        },\n",
+    "        \"correct\": \"correct answer\",\n",
+    "    },\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "TEMPLATE=\"\"\"\n",
+    "Text:{text}\n",
+    "You are an expert MCQ maker. Given the above text, it is your job to \\\n",
+    "create a quiz  of {number} multiple choice questions for {subject} students in {tone} tone. \n",
+    "Make sure the questions are not repeated and check all the questions to be conforming the text as well.\n",
+    "Make sure to format your response like  RESPONSE_JSON below  and use it as a guide. \\\n",
+    "Ensure to make {number} MCQs\n",
+    "### RESPONSE_JSON\n",
+    "{response_json}\n",
+    "\n",
+    "\"\"\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "quiz_generation_prompt = PromptTemplate(\n",
+    "    input_variables=[\"text\", \"number\", \"subject\", \"tone\", \"response_json\"],\n",
+    "    template=TEMPLATE\n",
+    "    )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "PromptTemplate(input_variables=['number', 'response_json', 'subject', 'text', 'tone'], input_types={}, partial_variables={}, template='\\nText:{text}\\nYou are an expert MCQ maker. Given the above text, it is your job to create a quiz  of {number} multiple choice questions for {subject} students in {tone} tone. \\nMake sure the questions are not repeated and check all the questions to be conforming the text as well.\\nMake sure to format your response like  RESPONSE_JSON below  and use it as a guide. Ensure to make {number} MCQs\\n### RESPONSE_JSON\\n{response_json}\\n\\n')"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "quiz_generation_prompt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "quiz_chain=LLMChain(llm=llm, prompt=quiz_generation_prompt, output_key=\"quiz\", verbose=True)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "LLMChain(verbose=True, prompt=PromptTemplate(input_variables=['number', 'response_json', 'subject', 'text', 'tone'], input_types={}, partial_variables={}, template='\\nText:{text}\\nYou are an expert MCQ maker. Given the above text, it is your job to create a quiz  of {number} multiple choice questions for {subject} students in {tone} tone. \\nMake sure the questions are not repeated and check all the questions to be conforming the text as well.\\nMake sure to format your response like  RESPONSE_JSON below  and use it as a guide. Ensure to make {number} MCQs\\n### RESPONSE_JSON\\n{response_json}\\n\\n'), llm=AzureChatOpenAI(client=<openai.resources.chat.completions.Completions object at 0x0000023EFEF566D0>, async_client=<openai.resources.chat.completions.AsyncCompletions object at 0x0000023EFEF52490>, model_name='gpt-4o', temperature=0.3, model_kwargs={}, openai_api_key='FMh5EMpFkTG1M6Tcj447lkS4zrrfHI8DDnGuRqp3tvX0G61gB8CDJQQJ99BAACHYHv6XJ3w3AAAAACOGbimh', openai_api_base='https://vijay-m6f1i5sd-eastus2.openai.azure.com/openai/deployments/gpt-4o', openai_proxy='', openai_api_version='2024-05-01-preview', openai_api_type='azure'), output_key='quiz', output_parser=StrOutputParser(), llm_kwargs={})"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "quiz_chain"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
