--- a/experiment/mcq.ipynb
+++ b/experiment/mcq.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 195,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,12 +18,13 @@
     "import traceback\n",
     "from dotenv import load_dotenv\n",
     "import PyPDF2\n",
-    "from openai import AzureOpenAI  "
+    "from openai import AzureOpenAI  \n",
+    "from langchain.chat_models import AzureChatOpenAI\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 196,
    "metadata": {},
    "outputs": [
     {
@@ -32,7 +33,7 @@
        "True"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 196,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -43,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 197,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,84 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "\n",
-    "# Initialize Azure OpenAI Service client with key-based authentication    \n",
-    "client = AzureOpenAI(  \n",
-    "    azure_endpoint=endpoint,  \n",
-    "    api_key=subscription_key,  \n",
-    "    api_version=\"2024-05-01-preview\",\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "    \n",
-    "#Prepare the chat prompt \n",
-    "chat_prompt = [\n",
-    "    {\n",
-    "        \"role\": \"system\",\n",
-    "        \"content\": [\n",
-    "            {\n",
-    "                \"type\": \"text\",\n",
-    "                \"text\": \"Tell me a Joke.\"\n",
-    "            }\n",
-    "        ]\n",
-    "    }\n",
-    "] \n",
-    "    \n",
-    "# Include speech result if speech is enabled  \n",
-    "messages = chat_prompt  \n",
-    "    \n",
-    "# Generate the completion  \n",
-    "completion = client.chat.completions.create(  \n",
-    "    model=deployment,\n",
-    "    messages=messages,\n",
-    "    max_tokens=80,  \n",
-    "    temperature=0.7,  \n",
-    "    top_p=0.95,  \n",
-    "    frequency_penalty=0,  \n",
-    "    presence_penalty=0,\n",
-    "    stop=None,  \n",
-    "    stream=False\n",
-    ")\n",
-    "\n",
-    "#print(completion.to_json()) "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "\"Sure! Here's one for you:\\n\\nWhy don't skeletons fight each other?  \\nBecause they don't have the guts! 😄\""
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "res=completion.choices[0]\n",
-    "res.message.content"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 198,
    "metadata": {},
    "outputs": [
     {
@@ -148,8 +72,6 @@
     }
    ],
    "source": [
-    "from langchain.chat_models import AzureChatOpenAI\n",
-    "from langchain.chains import LLMChain\n",
     "\n",
     "# Initialize Azure OpenAI LLM\n",
     "llm = AzureChatOpenAI(\n",
@@ -166,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 199,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -180,33 +102,13 @@
     "            \"d\": \"choice here\",\n",
     "        },\n",
     "        \"correct\": \"correct answer\",\n",
-    "    },\n",
-    "    \"2\": {\n",
-    "        \"mcq\": \"multiple choice question\",\n",
-    "        \"options\": {\n",
-    "            \"a\": \"choice here\",\n",
-    "            \"b\": \"choice here\",\n",
-    "            \"c\": \"choice here\",\n",
-    "            \"d\": \"choice here\",\n",
-    "        },\n",
-    "        \"correct\": \"correct answer\",\n",
-    "    },\n",
-    "    \"3\": {\n",
-    "        \"mcq\": \"multiple choice question\",\n",
-    "        \"options\": {\n",
-    "            \"a\": \"choice here\",\n",
-    "            \"b\": \"choice here\",\n",
-    "            \"c\": \"choice here\",\n",
-    "            \"d\": \"choice here\",\n",
-    "        },\n",
-    "        \"correct\": \"correct answer\",\n",
-    "    },\n",
-    "}"
+    "        }\n",
+    "    }"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 232,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -217,47 +119,27 @@
     "Make sure the questions are not repeated and check all the questions to be conforming the text as well.\n",
     "Make sure to format your response like  RESPONSE_JSON below  and use it as a guide. \\\n",
     "Ensure to make {number} MCQs\n",
-    "### RESPONSE_JSON\n",
     "{response_json}\n",
-    "\n",
-    "\"\"\""
+    "\"\"\"\n",
+    "#TEMPLATE"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 233,
    "metadata": {},
    "outputs": [],
    "source": [
     "quiz_generation_prompt = PromptTemplate(\n",
     "    input_variables=[\"text\", \"number\", \"subject\", \"tone\", \"response_json\"],\n",
     "    template=TEMPLATE\n",
-    "    )"
+    "    )\n",
+    "#quiz_generation_prompt"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "PromptTemplate(input_variables=['number', 'response_json', 'subject', 'text', 'tone'], input_types={}, partial_variables={}, template='\\nText:{text}\\nYou are an expert MCQ maker. Given the above text, it is your job to create a quiz  of {number} multiple choice questions for {subject} students in {tone} tone. \\nMake sure the questions are not repeated and check all the questions to be conforming the text as well.\\nMake sure to format your response like  RESPONSE_JSON below  and use it as a guide. Ensure to make {number} MCQs\\n### RESPONSE_JSON\\n{response_json}\\n\\n')"
-      ]
-     },
-     "execution_count": 21,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "quiz_generation_prompt"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 234,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -266,22 +148,282 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 235,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "TEMPLATE=\"\"\"\n",
+    "You are an expert english grammarian and writer. Given a Multiple Choice Quiz for {subject} students.\\\n",
+    "You need to evaluate the complexity of the question and give a complete analysis of the quiz. Only use at max 50 words for complexity analysis. \n",
+    "if the quiz is not at per with the cognitive and analytical abilities of the students,\\\n",
+    "update the quiz questions which needs to be changed and change the tone such that it perfectly fits the student abilities\n",
+    "Quiz_MCQs:\n",
+    "{quiz}\n",
+    "\n",
+    "Check from an expert English Writer of the above quiz:\n",
+    "\"\"\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 236,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "quiz_evaluation_prompt=PromptTemplate(input_variables=[\"subject\", \"quiz\"], template=TEMPLATE)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 237,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "review_chain=LLMChain(llm=llm, prompt=quiz_evaluation_prompt, output_key=\"review\", verbose=True)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 238,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "generate_evaluate_chain=SequentialChain(chains=[quiz_chain, review_chain], input_variables=[\"text\", \"number\", \"subject\", \"tone\", \"response_json\"],\n",
+    "                                        output_variables=[\"quiz\", \"review\"], verbose=True,)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 239,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "LLMChain(verbose=True, prompt=PromptTemplate(input_variables=['number', 'response_json', 'subject', 'text', 'tone'], input_types={}, partial_variables={}, template='\\nText:{text}\\nYou are an expert MCQ maker. Given the above text, it is your job to create a quiz  of {number} multiple choice questions for {subject} students in {tone} tone. \\nMake sure the questions are not repeated and check all the questions to be conforming the text as well.\\nMake sure to format your response like  RESPONSE_JSON below  and use it as a guide. Ensure to make {number} MCQs\\n### RESPONSE_JSON\\n{response_json}\\n\\n'), llm=AzureChatOpenAI(client=<openai.resources.chat.completions.Completions object at 0x0000023EFEF566D0>, async_client=<openai.resources.chat.completions.AsyncCompletions object at 0x0000023EFEF52490>, model_name='gpt-4o', temperature=0.3, model_kwargs={}, openai_api_key='FMh5EMpFkTG1M6Tcj447lkS4zrrfHI8DDnGuRqp3tvX0G61gB8CDJQQJ99BAACHYHv6XJ3w3AAAAACOGbimh', openai_api_base='https://vijay-m6f1i5sd-eastus2.openai.azure.com/openai/deployments/gpt-4o', openai_proxy='', openai_api_version='2024-05-01-preview', openai_api_type='azure'), output_key='quiz', output_parser=StrOutputParser(), llm_kwargs={})"
+       "'C:\\\\Users\\\\HI\\\\Documents\\\\test-openai\\\\projects\\\\mcqgen\\\\data.txt'"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 239,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "quiz_chain"
+    "file_path=r\"C:\\Users\\HI\\Documents\\test-openai\\projects\\mcqgen\\data.txt\"\n",
+    "file_path"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 240,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open(file_path,'r') as file:\n",
+    "    TEXT=file.read()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 241,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Data science is an interdisciplinary academic field[1] that uses statistics, scientific computing, scientific methods, processes, algorithms and systems to extract or extrapolate knowledge and insights from noisy, structured, and unstructured data.[2]\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(TEXT)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 242,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'{\"1\": {\"mcq\": \"multiple choice question\", \"options\": {\"a\": \"choice here\", \"b\": \"choice here\", \"c\": \"choice here\", \"d\": \"choice here\"}, \"correct\": \"correct answer\"}}'"
+      ]
+     },
+     "execution_count": 242,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "json.dumps(RESPONSE_JSON)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 243,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "NUMBER=1\n",
+    "SUBJECT=\"data science\"\n",
+    "TONE=\"simple\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 244,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "\n",
+      "\u001b[1m> Entering new SequentialChain chain...\u001b[0m\n",
+      "\n",
+      "\n",
+      "\u001b[1m> Entering new LLMChain chain...\u001b[0m\n",
+      "Prompt after formatting:\n",
+      "\u001b[32;1m\u001b[1;3m\n",
+      "Text:Data science is an interdisciplinary academic field[1] that uses statistics, scientific computing, scientific methods, processes, algorithms and systems to extract or extrapolate knowledge and insights from noisy, structured, and unstructured data.[2]\n",
+      "\n",
+      "You are an expert MCQ maker. Given the above text, it is your job to create a quiz  of 1 multiple choice questions for data science students in simple tone. \n",
+      "Make sure the questions are not repeated and check all the questions to be conforming the text as well.\n",
+      "Make sure to format your response like  RESPONSE_JSON below  and use it as a guide. Ensure to make 1 MCQs\n",
+      "{\"1\": {\"mcq\": \"multiple choice question\", \"options\": {\"a\": \"choice here\", \"b\": \"choice here\", \"c\": \"choice here\", \"d\": \"choice here\"}, \"correct\": \"correct answer\"}}\n",
+      "\u001b[0m\n",
+      "\n",
+      "\u001b[1m> Finished chain.\u001b[0m\n",
+      "\n",
+      "\n",
+      "\u001b[1m> Entering new LLMChain chain...\u001b[0m\n",
+      "Prompt after formatting:\n",
+      "\u001b[32;1m\u001b[1;3m\n",
+      "You are an expert english grammarian and writer. Given a Multiple Choice Quiz for data science students.You need to evaluate the complexity of the question and give a complete analysis of the quiz. Only use at max 50 words for complexity analysis. \n",
+      "if the quiz is not at per with the cognitive and analytical abilities of the students,update the quiz questions which needs to be changed and change the tone such that it perfectly fits the student abilities\n",
+      "Quiz_MCQs:\n",
+      "```json\n",
+      "{\n",
+      "  \"1\": {\n",
+      "    \"mcq\": \"What does the field of data science primarily focus on?\",\n",
+      "    \"options\": {\n",
+      "      \"a\": \"Designing websites and applications\",\n",
+      "      \"b\": \"Extracting knowledge and insights from data\",\n",
+      "      \"c\": \"Building physical machines and robots\",\n",
+      "      \"d\": \"Studying ancient civilizations\"\n",
+      "    },\n",
+      "    \"correct\": \"b\"\n",
+      "  }\n",
+      "}\n",
+      "```\n",
+      "\n",
+      "Check from an expert English Writer of the above quiz:\n",
+      "\u001b[0m\n",
+      "\n",
+      "\u001b[1m> Finished chain.\u001b[0m\n",
+      "\n",
+      "\u001b[1m> Finished chain.\u001b[0m\n"
+     ]
+    }
+   ],
+   "source": [
+    "#https://python.langchain.com/docs/modules/model_io/llms/token_usage_tracking\n",
+    "\n",
+    "#How to setup Token Usage Tracking in LangChain\n",
+    "with get_openai_callback() as cb:\n",
+    "    response=generate_evaluate_chain(\n",
+    "        {\n",
+    "            \"text\": TEXT,\n",
+    "            \"number\": NUMBER,\n",
+    "            \"subject\":SUBJECT,\n",
+    "            \"tone\": TONE,\n",
+    "            \"response_json\": json.dumps(RESPONSE_JSON)\n",
+    "        }\n",
+    "        )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 246,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Total Tokens:679\n",
+      "Prompt Tokens:392\n",
+      "Completion Tokens:287\n",
+      "Total Cost:0.00385\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f\"Total Tokens:{cb.total_tokens}\")\n",
+    "print(f\"Prompt Tokens:{cb.prompt_tokens}\")\n",
+    "print(f\"Completion Tokens:{cb.completion_tokens}\")\n",
+    "print(f\"Total Cost:{cb.total_cost}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 254,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'text': 'Data science is an interdisciplinary academic field[1] that uses statistics, scientific computing, scientific methods, processes, algorithms and systems to extract or extrapolate knowledge and insights from noisy, structured, and unstructured data.[2]\\n',\n",
+       " 'number': 1,\n",
+       " 'subject': 'data science',\n",
+       " 'tone': 'simple',\n",
+       " 'response_json': '{\"1\": {\"mcq\": \"multiple choice question\", \"options\": {\"a\": \"choice here\", \"b\": \"choice here\", \"c\": \"choice here\", \"d\": \"choice here\"}, \"correct\": \"correct answer\"}}',\n",
+       " 'quiz': '```json\\n{\\n  \"1\": {\\n    \"mcq\": \"What does the field of data science primarily focus on?\",\\n    \"options\": {\\n      \"a\": \"Designing websites and applications\",\\n      \"b\": \"Extracting knowledge and insights from data\",\\n      \"c\": \"Building physical machines and robots\",\\n      \"d\": \"Studying ancient civilizations\"\\n    },\\n    \"correct\": \"b\"\\n  }\\n}\\n```',\n",
+       " 'review': '### Complexity Analysis:\\nThe question is straightforward and tests basic knowledge of data science. It is suitable for beginners but lacks depth for intermediate or advanced students. The distractors (incorrect options) are overly simplistic and do not challenge analytical thinking.\\n\\n### Updated Question:\\n```json\\n{\\n  \"1\": {\\n    \"mcq\": \"What is the primary goal of data science as a discipline?\",\\n    \"options\": {\\n      \"a\": \"Developing user-friendly software interfaces\",\\n      \"b\": \"Deriving actionable insights and predictions from data\",\\n      \"c\": \"Constructing hardware systems for automation\",\\n      \"d\": \"Exploring historical trends in ancient societies\"\\n    },\\n    \"correct\": \"b\"\\n  }\\n}\\n```\\n\\n### Explanation of Changes:\\n- Rephrased the question to sound more professional and precise.\\n- Improved the distractors to make them more plausible, encouraging critical thinking.\\n- Adjusted the tone to better align with the cognitive level of data science students.'}"
+      ]
+     },
+     "execution_count": 254,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "response"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 260,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "```json\n",
+      "{\n",
+      "  \"1\": {\n",
+      "    \"mcq\": \"What does the field of data science primarily focus on?\",\n",
+      "    \"options\": {\n",
+      "      \"a\": \"Designing websites and applications\",\n",
+      "      \"b\": \"Extracting knowledge and insights from data\",\n",
+      "      \"c\": \"Building physical machines and robots\",\n",
+      "      \"d\": \"Studying ancient civilizations\"\n",
+      "    },\n",
+      "    \"correct\": \"b\"\n",
+      "  }\n",
+      "}\n",
+      "```\n"
+     ]
+    }
+   ],
+   "source": [
+    "qz=response.get('quiz')\n",
+    "print(qz)"
    ]
   },
   {
